Fix native docker image
