# src/main/java/io/github/rjaros87/jwttestkit/model/okta/OktaToken.java
@@ -3,8 +3,8 @@ package io.github.rjaros87.jwttestkit.model.okta;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import io.github.rjaros87.jwttestkit.utils.AbstractTokenHelper;
 import io.github.rjaros87.jwttestkit.model.Claims;
+import io.github.rjaros87.jwttestkit.utils.Faker;
 import io.github.rjaros87.jwttestkit.utils.JWTUtils;
 import io.micronaut.core.annotation.Introspected;
 import io.micronaut.serde.annotation.Serdeable;
@@ -14,26 +14,29 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+/**
+ * Represents an Okta token with various claims.
+ */
 @Introspected
 @Serdeable
 @Getter
 @JsonIgnoreProperties(ignoreUnknown = true)
-public class OktaToken extends AbstractTokenHelper implements Claims {
+public class OktaToken implements Claims {
 
     @JsonProperty("sub")
     private String sub = UUID.randomUUID().toString();
 
     @JsonProperty("name")
-    private String name = FAKER.name().fullName();
+    private String name = Faker.randomWord();
 
     @JsonProperty("preferred_username")
-    private String preferredUsername = FAKER.internet().username();
+    private String preferredUsername = Faker.randomText(5);
 
     @JsonProperty("email")
-    private String email = FAKER.internet().emailAddress();
+    private String email = Faker.randomEmailAddress();
 
     @JsonProperty("groups")
-    private List<String> groups = List.of(FAKER.lorem().word());
+    private List<String> groups = List.of(Faker.randomText(5));
 
     @JsonProperty("exp")
     private Long exp = JWTUtils.getDefaultExpTime();
@@ -42,21 +45,14 @@ public class OktaToken extends AbstractTokenHelper implements Claims {
     private Long iat = JWTUtils.getDefaultIatTime();
 
     @JsonProperty("iss")
-    private String iss = FAKER.internet().url();
+    private String iss = Faker.randomUrl();
 
     @JsonProperty("aud")
-    private String aud = FAKER.internet().url();
+    private String aud = Faker.randomUrl();
 
     @JsonCreator
-    public OktaToken(@JsonProperty("sub") String sub,
-                     @JsonProperty("name") String name,
-                     @JsonProperty("preferred_username") String preferredUsername,
-                     @JsonProperty("email") String email,
-                     @JsonProperty("groups") List<String> groups,
-                     @JsonProperty("exp") Long exp,
-                     @JsonProperty("iat") Long iat,
-                     @JsonProperty("iss") String iss,
-                     @JsonProperty("aud") String aud) {
+    public OktaToken(String sub, String name, String preferredUsername, String email, List<String> groups, Long exp,
+                    Long iat, String iss, String aud) {
         this.sub = Optional.ofNullable(sub).orElse(this.sub);
         this.name = Optional.ofNullable(name).orElse(this.name);
         this.preferredUsername = Optional.ofNullable(preferredUsername).orElse(this.preferredUsername);
@@ -66,5 +62,10 @@ public class OktaToken extends AbstractTokenHelper implements Claims {
         this.iat = Optional.ofNullable(iat).orElse(this.iat);
         this.iss = Optional.ofNullable(iss).orElse(this.iss);
         this.aud = Optional.ofNullable(aud).orElse(this.aud);
+    }
+
+    @Override
+    public Object objectToSign() {
+        return this;
     }
 }
