# src/main/java/io/github/rjaros87/jwttestkit/model/sample/SampleToken.java
@@ -1,19 +1,24 @@
 package io.github.rjaros87.jwttestkit.model.sample;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import io.github.rjaros87.jwttestkit.utils.AbstractTokenHelper;
 import io.github.rjaros87.jwttestkit.model.Claims;
+import io.github.rjaros87.jwttestkit.utils.Faker;
 import io.github.rjaros87.jwttestkit.utils.JWTUtils;
 import io.micronaut.core.annotation.Introspected;
 import io.micronaut.serde.annotation.Serdeable;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 
 import java.util.UUID;
 
+/**
+ * Represents a sample token with various claims.
+ */
+@Slf4j
 @Introspected
 @Serdeable
 @Getter
-public class SampleToken extends AbstractTokenHelper implements Claims {
+public class SampleToken implements Claims {
 
     @JsonProperty("exp")
     protected Long exp = JWTUtils.getDefaultExpTime();
@@ -25,5 +30,10 @@ public class SampleToken extends AbstractTokenHelper implements Claims {
     private Long iat = JWTUtils.getDefaultIatTime();
 
     @JsonProperty("name")
-    private String name = FAKER.internet().username();
+    private String name = Faker.randomText(10);
+
+    @Override
+    public Object objectToSign() {
+        return this;
+    }
 }
