# src/main/resources/swagger/api.yaml
@@ -188,58 +188,56 @@ components:
       - username
       - version
       type: object
-      allOf:
-      - $ref: "#/components/schemas/AbstractTokenHelper"
-      - properties:
-          exp:
-            type: integer
-            format: int64
-          sub:
+      properties:
+        exp:
+          type: integer
+          format: int64
+        sub:
+          type: string
+        device_key:
+          type: string
+        cognito:groups:
+          type: array
+          items:
             type: string
-          device_key:
-            type: string
-          cognito:groups:
-            type: array
-            items:
-              type: string
-          iss:
-            type: string
-          version:
-            type: integer
-            format: int32
-          client_id:
-            type: string
-          origin_jti:
-            type: string
-          event_id:
-            type: string
-          token_use:
-            type: string
-          scope:
-            type: string
-          auth_time:
-            type: integer
-            format: int64
-          iat:
-            type: integer
-            format: int64
-          jti:
-            type: string
-          username:
-            type: string
-    AbstractTokenHelper:
-      type: object
+        iss:
+          type: string
+        version:
+          type: integer
+          format: int32
+        client_id:
+          type: string
+        origin_jti:
+          type: string
+        event_id:
+          type: string
+        token_use:
+          type: string
+        scope:
+          type: string
+        auth_time:
+          type: integer
+          format: int64
+        iat:
+          type: integer
+          format: int64
+        jti:
+          type: string
+        username:
+          type: string
+      description: Represents an AWS Cognito token with various claims.
     CustomToken:
       type: object
-      allOf:
-      - $ref: "#/components/schemas/AbstractTokenHelper"
-      - properties:
-          exp:
-            type: integer
-            format: int64
-          customClaims:
-            type: object
-            additionalProperties: true
+      properties:
+        exp:
+          type: integer
+          format: int64
+        sub:
+          type: string
+        customClaims:
+          type: object
+          additionalProperties: true
+      description: Represents a custom token with dynamic claims.
     KeysResponse:
       required:
       - private_key
@@ -262,32 +260,33 @@ components:
       - preferred_username
       - sub
       type: object
-      allOf:
-      - $ref: "#/components/schemas/AbstractTokenHelper"
-      - properties:
-          sub:
+      properties:
+        sub:
+          type: string
+        name:
+          type: string
+        preferred_username:
+          type: string
+        email:
+          type: string
+        groups:
+          type: array
+          items:
             type: string
-          name:
-            type: string
-          preferred_username:
-            type: string
-          email:
-            type: string
-          groups:
-            type: array
-            items:
-              type: string
-          exp:
-            type: integer
-            format: int64
-          iat:
-            type: integer
-            format: int64
-          iss:
-            type: string
-          aud:
-            type: string
+        exp:
+          type: integer
+          format: int64
+        iat:
+          type: integer
+          format: int64
+        iss:
+          type: string
+        aud:
+          type: string
+      description: Represents an Okta token with various claims.
     TokenResponse:
+      required:
+      - access_token
       type: object
       properties:
         token_type:
@@ -297,6 +296,7 @@ components:
         expires_in:
           type: integer
           format: int64
+      description: Represents a response containing a JWT token.
   securitySchemes:
     bearerAuth:
       type: http
